--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,10 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
         </activity>
+        <activity
+            android:name=".FaceRecog"
+            android:label="@string/app_name"
+            android:orientation="vertical"></activity>
     </application>
 
 </manifest>
