--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- modified camera taken from com.wordpress.bytedebugger.simplecamera -->
+<?xml version="1.0" encoding="utf-8"?><!-- modified camera taken from com.wordpress.bytedebugger.simplecamera -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.pengcit.simplecamera">
 
@@ -19,23 +18,26 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:orientation="vertical"></activity>
+            android:orientation="vertical" />
         <activity android:name=".TestActivity">
+
+        </activity>
+        <activity
+            android:name=".MenuBar"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme"></activity>
+        <activity
+            android:name=".FaceRecog"
+            android:label="@string/app_name"
+            android:orientation="vertical">
+        </activity>
+        <activity android:name=".CharRecognitionActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".MenuBar"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme">
-        </activity>
-        <activity
-            android:name=".FaceRecog"
-            android:label="@string/app_name"
-            android:orientation="vertical"></activity>
     </application>
 
 </manifest>
