--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:design:23.4.0'
+    compile 'com.github.SandroMachado:openalpr-android:1.1.1'
+    compile 'com.google.code.gson:gson:2.2.4'
 }
